# thai-election69-fraud-isn-t

./: README.md  pyproject.toml
.github/workflows/: deploy.yml
data/: stats_party.json
data/smiley159/: all-areas-constituency-results.json  all-areas-party-list-results.json
frontend/: .npmrc  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/data/: election-data.json
frontend/scripts/: extract-svg-data.ts  precompute-data.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/map/: ElectionMap.tsx
frontend/src/components/ui/: About.tsx  Header.tsx  Legend.tsx  Tooltip.tsx  ViewToggle.tsx
frontend/src/hooks/: useElectionData.ts
frontend/src/lib/: colorUtils.ts  i18n.tsx  translations.ts  types.ts
notebooks/: analysis.ipynb  explore.ipynb  explore1.ipynb
