[project]
name = "thai-election69-fraud"
version = "0.1.0"
description = ""
authors = [
    {name = "waritboonmasiri",email = "warit.boonmasiri@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
