[project]
name = "thai-election69-fraud"
version = "0.1.0"
description = ""
authors = [
    {name = "waritboonmasiri",email = "warit.boonmasiri@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "matplotlib (>=3.9.0,<4.0.0)",
    "scipy (>=1.14.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
